--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "needle": "^3.0.0",
+    "node-fetch": "^3.0.0"
   }
 }
